<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.jjoe64.graphview.GraphView
        android:id="@+id/all_sensor_graph"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:background="@color/colorPrimary"
        android:padding="32dp"
        android:paddingLeft="32dp"
        android:paddingTop="32dp"
        android:paddingRight="32dp"
        android:paddingBottom="32dp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/nav_button_moist"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/nav_button_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/temperature_android_string_fingerprint_icon_content_description"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/nav_button_humid"
        app:layout_constraintStart_toEndOf="@+id/nav_button_light"
        app:srcCompat="@drawable/temperature" />

    <ImageButton
        android:id="@+id/nav_button_humid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/humidity_android_string_fingerprint_icon_content_description"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toStartOf="@+id/nav_button_moist"
        app:layout_constraintStart_toEndOf="@+id/nav_button_temp"
        app:srcCompat="@drawable/humidity" />

    <ImageButton
        android:id="@+id/nav_button_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/light_android_string_fingerprint_icon_content_description"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/nav_button_temp"
        app:layout_constraintStart_toStartOf="@+id/all_sensor_graph"
        app:srcCompat="@drawable/light_intensity" />

    <ImageButton
        android:id="@+id/nav_button_moist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/moisture_icon"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/all_sensor_graph"
        app:layout_constraintStart_toEndOf="@+id/nav_button_humid"
        app:srcCompat="@drawable/soil_moisture" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nav_button_temp"
        app:layout_constraintStart_toStartOf="@+id/nav_button_temp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nav_button_humid"
        app:layout_constraintStart_toStartOf="@+id/nav_button_humid" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moisture"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nav_button_moist"
        app:layout_constraintStart_toStartOf="@+id/nav_button_moist" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/nav_button_light"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/nav_button_light"
        app:layout_constraintTop_toBottomOf="@+id/nav_button_light"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>